# bsdiff

./: CMakeLists.txt  README.md  bsdiff.c  bsdiff.h  bspatch.c  bspatch.h  build.sh  main.c
bzlib/: CMakeLists.txt  blocksort.c  bzlib_private.h
project/android/: build.sh
project/android/bilidiff/: settings.gradle
project/android/bilidiff/app/: build.gradle
project/android/bilidiff/app/src/androidTest/java/com/zhumingwei/bilidiff/: ExampleInstrumentedTest.java
project/android/bilidiff/app/src/main/: AndroidManifest.xml
project/android/bilidiff/app/src/main/cpp/: CMakeLists.txt  bsdiff.cpp  bsdiff.h  bspatch.cpp  bspatch.h
project/android/bilidiff/app/src/main/cpp/include/: AndroidLog.h
project/android/bilidiff/app/src/main/java/com/zhumingwei/bilidiff/: BSUtil.java  MainActivity.java  Util.java
project/android/bilidiff/app/src/main/res/layout/: activity_main.xml
project/android/bilidiff/app/src/main/res/values/: strings.xml
project/android/bilidiff/app/src/test/java/com/zhumingwei/bilidiff/: ExampleUnitTest.java
project/android/bilidiff/gradle/wrapper/: gradle-wrapper.properties
res/: autotest.sh
